<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analisa</string>
    <string name="result">Hasil Analisis</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="save">Simpan</string>
    <string name="article">Artikel</string>
    <string name="hasil">Hasil :</string>
</resources>