<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.ResultActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <ImageView
            android:id="@+id/imgCancer"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_cancercell"/>
        <TextView
            android:id="@+id/appname"
            android:layout_toEndOf="@+id/imgCancer"
            android:layout_marginStart="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="24sp"/>

        <ImageView
            android:id="@+id/result_image"
            android:layout_below="@+id/appname"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_place_holder"/>

        <TextView
            android:id="@+id/result_title"
            android:layout_below="@+id/result_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hasil"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/result_text"
            android:layout_below="@+id/result_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tooltipText="@string/result"
            android:textSize="18sp"/>

        <Button
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:id="@+id/saveButton"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
    </RelativeLayout>
</ScrollView>