<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.MainActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">
        
        <ImageView
            android:id="@+id/imgCancer"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_cancercell"/>
        <TextView
            android:id="@+id/appname"
            android:layout_toEndOf="@+id/imgCancer"
            android:layout_marginStart="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="24sp"/>

        <ImageButton
            android:id="@+id/btnsave"
            android:layout_marginTop="4dp"
            android:layout_marginStart="18dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_save"
            android:background="@null"
            android:layout_alignParentEnd="true"/>

        <ImageButton
            android:id="@+id/btnarticle"
            android:layout_marginTop="4dp"
            android:layout_toStartOf="@+id/btnsave"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_news"
            android:background="@null"/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp"
        app:srcCompat="@drawable/ic_place_holder" />

    <RelativeLayout
        android:layout_below="@+id/previewImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">
        <Button
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:id="@+id/galleryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gallery"/>

        <Button
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:id="@+id/analyzeButton"
            android:layout_below="@+id/galleryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/analyze"/>
    </RelativeLayout>
</RelativeLayout>